--- a/clientes/templates/clientes/lista_clientes.html
+++ b/clientes/templates/clientes/lista_clientes.html
@@ -190,7 +190,7 @@
                         <li data-timestamp="{{ forloop.counter0 }}" class="cliente-item">{{ cliente.nome }} - <em>{{ cliente.ticket }}</em></li>
                     {% endfor %}
                 {% else %}
-                    <p class="no-clients">Nenhum cliente disponível.</p>
+                    <p class="no-clients">O sorteio ainda não foi realizado.</p>
                 {% endif %}
             </ul>
         </div>
