--- a/clientes/templates/clientes/lista_clientes.html
+++ b/clientes/templates/clientes/lista_clientes.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Lista de Clientes</title>
     <style>
@@ -95,25 +96,34 @@
         }
 
         @keyframes dots {
-            0%, 20% {
+
+            0%,
+            20% {
                 opacity: 0;
             }
+
             40% {
                 opacity: 1;
             }
+
             60% {
                 opacity: 0;
             }
-            80%, 100% {
+
+            80%,
+            100% {
                 opacity: 1;
             }
         }
+
         /* Menu de opções */
         .menu {
-            position: fixed; /* Fixar o menu no canto superior direito */
+            position: fixed;
+            /* Fixar o menu no canto superior direito */
             top: 20px;
             right: 20px;
-            z-index: 1000; /* Garantir que o menu esteja acima dos outros elementos */
+            z-index: 1000;
+            /* Garantir que o menu esteja acima dos outros elementos */
         }
 
         .menu-button {
@@ -164,18 +174,19 @@
         }
     </script>
 </head>
+
 <body>
     <div class="container">
         <h1>Mega Sorteio</h1>
 
         <div class="button-container">
             {% if botao_ativo %}
-                <form id="sortear-form" method="POST" action="{% url 'clientes:sortear_clientes' %}">
-                    {% csrf_token %}
-                    <button type="button" onclick="startSortear()">Sortear</button>
-                </form>
+            <form id="sortear-form" method="POST" action="{% url 'clientes:lista_clientes' %}">
+                {% csrf_token %}
+                <button type="submit">Sortear</button>
+            </form>
             {% else %}
-                <p>O botão de sorteio está inativo.</p>
+            <p>O botão de sorteio está inativo.</p>
             {% endif %}
         </div>
 
@@ -186,11 +197,11 @@
         <div id="clientes-list" class="clientes-list">
             <ul id="clientes-ul">
                 {% if clientes %}
-                    {% for cliente in clientes %}
-                        <li data-timestamp="{{ forloop.counter0 }}" class="cliente-item">{{ cliente.nome }} - <em>{{ cliente.ticket }}</em></li>
-                    {% endfor %}
+                {% for cliente in clientes %}
+                <li data-timestamp="{{ forloop.counter0 }}" class="cliente-item">{{ cliente.nome }} - <em>{{ cliente.ticket }}</em></li>
+                {% endfor %}
                 {% else %}
-                    <p class="no-clients">O sorteio ainda não foi realizado.</p>
+                <p class="no-clients">O sorteio ainda não foi realizado.</p>
                 {% endif %}
             </ul>
         </div>
@@ -198,35 +209,10 @@
 
     <script>
         function startSortear() {
-            // Mostrar a mensagem de carregamento
-            document.getElementById('loading').style.display = 'block';
-            
-            // Ocultar a lista de clientes
-            document.getElementById('clientes-ul').style.display = 'none';
-
-            // Mostrar os clientes um a um com delay
-            const items = Array.from(document.querySelectorAll('.cliente-item'));
-            let delay = 0;
-
-            items.forEach(item => {
-                setTimeout(() => {
-                    item.style.display = 'block'; // Exibir item
-                }, delay);
-                delay += 1000; // Aumenta o delay para o próximo item
-            });
-
-            // Ocultar a mensagem de carregamento após todos os itens terem sido exibidos
-            setTimeout(() => {
-                document.getElementById('loading').style.display = 'none';
-                document.getElementById('clientes-ul').style.display = 'block';
-            }, delay);
+            document.getElementById('sortear-form').submit();
         }
-
-        // Inicialmente, esconder os itens da lista de clientes
-        document.querySelectorAll('.cliente-item').forEach(item => {
-            item.style.display = 'none';
-        });
     </script>
+
     <div class="menu">
         <button class="menu-button" onclick="toggleMenu()">Menu</button>
         <div class="menu-content">
@@ -235,4 +221,6 @@
         </div>
     </div>
 </body>
+
+
 </html>
