--- a/clientes/templates/clientes/lista_clientes.html
+++ b/clientes/templates/clientes/lista_clientes.html
@@ -119,11 +119,9 @@
         /* Menu de opções */
         .menu {
             position: fixed;
-            /* Fixar o menu no canto superior direito */
             top: 20px;
             right: 20px;
             z-index: 1000;
-            /* Garantir que o menu esteja acima dos outros elementos */
         }
 
         .menu-button {
@@ -167,62 +165,70 @@
         .menu.show .menu-content {
             display: block;
         }
-/* Estiliza a lista de clientes */
-.clientes-list {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Fonte moderna */
-    margin: 20px auto;
-    padding: 0;
-    max-width: 900px; /* Largura máxima para centralizar o conteúdo */
-    text-align: center; /* Centraliza o texto dos itens da lista */
-}
 
-#clientes-ul {
-    list-style-type: none; /* Remove marcadores padrão */
-    padding: 0;
-    margin: 0 auto; /* Centraliza a lista horizontalmente */
-}
+        /* Estiliza a lista de clientes */
+        .clientes-list {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 20px auto;
+            padding: 0;
+            max-width: 900px;
+            text-align: center;
+        }
 
-.cliente-item {
-    background-color: #ffffff; /* Fundo branco para cada item */
-    border: 1px solid #e0e0e0; /* Borda suave */
-    border-radius: 8px; /* Bordas arredondadas */
-    margin: 10px auto; /* Espaçamento vertical entre os itens e centraliza horizontalmente */
-    padding: 20px; /* Espaçamento interno */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra leve */
-    transition: background-color 0.3s, box-shadow 0.3s; /* Transições suaves */
-    max-width: 100%; /* Garante que o card não ultrapasse a largura do contêiner */
-    display: inline-block; /* Faz os cards se ajustarem e não se estenderem a largura total */
-    text-align: left; /* Alinha o texto à esquerda dentro do card */
-}
+        #clientes-ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0 auto;
+        }
 
-.cliente-item:hover {
-    background-color: #f1f1f1; /* Cor de fundo ao passar o mouse */
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15); /* Aumenta a sombra ao passar o mouse */
-}
+        .cliente-item {
+            background-color: #ffffff;
+            border: 1px solid #e0e0e0;
+            border-radius: 8px;
+            margin: 10px auto;
+            padding: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: background-color 0.3s, box-shadow 0.3s;
+            max-width: 100%;
+            display: inline-block;
+            text-align: left;
+        }
 
-.cliente-info {
-    margin-bottom: 12px; /* Espaçamento entre as informações */
-}
+        .cliente-item:hover {
+            background-color: #f1f1f1;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
+        }
 
-.label {
-    font-weight: bold;
-    color: #333; /* Cor do texto */
-    display: inline-block;
-    min-width: 100px; /* Largura mínima para alinhamento */
-}
+        .cliente-info {
+            margin-bottom: 12px;
+        }
 
-.value {
-    color: #555; /* Cor do texto */
-    font-size: 16px; /* Tamanho da fonte */
-}
+        .label {
+            font-weight: bold;
+            color: #333;
+            display: inline-block;
+            min-width: 100px;
+        }
 
-.no-clients {
-    text-align: center;
-    color: #888; /* Cor mais clara para o texto */
-    font-style: italic;
-    font-size: 18px; /* Tamanho da fonte */
-}
+        .value {
+            color: #555;
+            font-size: 16px;
+        }
 
+        .no-clients {
+            text-align: center;
+            color: #888;
+            font-style: italic;
+            font-size: 18px;
+        }
+
+        /* Adiciona estilo para a colocação */
+        .placement {
+            font-weight: bold;
+            font-size: 18px;
+            color: #007bff;
+            margin-right: 10px;
+        }
     </style>
     <script>
         function toggleMenu() {
@@ -253,25 +259,25 @@
         <div id="clientes-list" class="clientes-list">
             <ul id="clientes-ul">
                 {% if clientes %}
-                    {% for cliente in clientes %}
-                        <li data-timestamp="{{ forloop.counter0 }}" class="cliente-item">
-                            <div class="cliente-info">
-                                <strong class="label">Nome:</strong> <span class="value">{{ cliente.nome }}</span>
-                            </div>
-                            <div class="cliente-info">
-                                <strong class="label">Cidade:</strong> <span class="value">{{ cliente.cidade }}</span>
-                            </div>
-                            <div class="cliente-info">
-                                <strong class="label">Ticket:</strong> <em class="value">{{ cliente.ticket }}</em>
-                            </div>
-                        </li>
-                    {% endfor %}
+                {% for cliente in clientes %}
+                <li data-timestamp="{{ forloop.counter0 }}" class="cliente-item">
+                    <div class="cliente-info">
+
+                        <strong class="label"><span class="placement">{{ forloop.counter }}º</span>Nome:</strong> <span class="value">{{ cliente.nome }}</span>
+                    </div>
+                    <div class="cliente-info">
+                        <strong class="label">Cidade:</strong> <span class="value">{{ cliente.cidade }}</span>
+                    </div>
+                    <div class="cliente-info">
+                        <strong class="label">Ticket:</strong> <em class="value">{{ cliente.ticket }}</em>
+                    </div>
+                </li>
+                {% endfor %}
                 {% else %}
-                    <p class="no-clients">O sorteio ainda não foi realizado.</p>
+                <p class="no-clients">O sorteio ainda não foi realizado.</p>
                 {% endif %}
             </ul>
         </div>
-        
     </div>
 
     <script>
@@ -288,6 +294,5 @@
         </div>
     </div>
 </body>
-
 
 </html>
